Model update, Controller update, dependencies update.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-server.error.whitelabel.enabled=false
-
+#server.error.whitelabel.enabled=false
+#spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProjetScientifique
+spring.datasource.username=postgres
+spring.datasource.password=login123
