--- a/projet-scientifique/package.json
+++ b/projet-scientifique/package.json
@@ -12,13 +12,15 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.7.0",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "leaflet": "^1.9.3"
   },
   "eslintConfig": {
     "root": true,
