--- a/dashboard/telegraf.conf
+++ b/dashboard/telegraf.conf
@@ -1,5 +1,8 @@
-[[outputs.influxdb]]
-  urls = ["http://172.19.0.2:8086"]
+[[outputs.influxdb_v2]]
+  urls = ["http://influxdb:8086"]
+  organization = "CPE"
+  bucket="test"
+  token="3tmV_9xsIl68lVDaaUw6tF_PhkM7VTr7bw1Mlw7-cBlg2GdDjzHcV4JrVuqMm9vRHBulsJ9A622IXx-GDkpQfg=="
 
 [[outputs.file]]
   files = ["stdout", "/tmp/metrics.out"]
@@ -10,3 +13,6 @@
   topics = [
     "capteur/#"
   ]
+
+
+   
