--- a/projet-scientifique/package.json
+++ b/projet-scientifique/package.json
@@ -12,6 +12,7 @@
     "@turf/square-grid": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "core-js": "^3.6.5",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.0.0"
   },
   "devDependencies": {
