--- a/dashboard/telegraf.conf
+++ b/dashboard/telegraf.conf
@@ -1,18 +1,15 @@
 [[outputs.influxdb_v2]]
-  urls = ["http://influxdb:8086"]
+  urls = ["http://172.19.0.4:8086"]
   organization = "CPE"
-  bucket="test"
-  token="3tmV_9xsIl68lVDaaUw6tF_PhkM7VTr7bw1Mlw7-cBlg2GdDjzHcV4JrVuqMm9vRHBulsJ9A622IXx-GDkpQfg=="
+  bucket="database"
+  token="wlXzIO4LT569sEzklq1k5N_Ns6WsTDtOSKCI9UW8WsXcGbVlX_iGUXGameWWbddclgKsLRvk4R36u0SmtUYQRg=="
 
 [[outputs.file]]
   files = ["stdout", "/tmp/metrics.out"]
 
 
 [[inputs.mqtt_consumer]]
-  servers = ["tcp://mosquitto:1883"]
+  servers = ["tcp://172.19.0.5:1883"]
   topics = [
     "capteur/#"
   ]
-
-
-   
