--- a/dashboard/docker-compose.yml
+++ b/dashboard/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     volumes:
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
     networks:
-      - iot
+      iot:
+        ipv4_address: 172.19.0.5
 
   influxdb:
     image: influxdb
@@ -20,7 +21,8 @@ services:
     volumes:
       - influxdb-data:/var/lib/influxdb
     networks:
-      - iot
+      iot:
+        ipv4_address: 172.19.0.4
 
   telegraf:
     image: telegraf
@@ -31,7 +33,8 @@ services:
       - mosquitto
       - influxdb
     networks:
-      - iot
+      iot:
+        ipv4_address: 172.19.0.3
 
   grafana:
     image: grafana/grafana
@@ -43,10 +46,16 @@ services:
     depends_on:
       - influxdb
     networks:
-      - iot
+      iot:
+        ipv4_address: 172.19.0.2
 
 networks:
   iot:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 172.19.0.0/16
+         gateway: 172.19.0.1
 
 volumes:
   influxdb-data:
