--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,17 @@
 			<artifactId>javatuples</artifactId>
 			<version>1.2</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
