--- a/projet-scientifique/package.json
+++ b/projet-scientifique/package.json
@@ -11,6 +11,7 @@
     "@turf/point-grid": "^6.5.0",
     "@turf/square-grid": "^6.5.0",
     "@turf/turf": "^6.5.0",
+    "axios": "^1.2.2",
     "core-js": "^3.6.5",
     "leaflet-routing-machine": "^3.2.12",
     "lodash.debounce": "^4.0.8",
